[package]
name = "wack_sorting_algo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["rt", "macros", "rt-multi-thread"] }


[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"
lto = "fat"
